# GLChess

./: CMakeLists.txt  run.bat
app/: app.cpp
res/Shaders/: Main.glsl
src/: CMakeLists.txt  Chess.h  cgpch.h
src/Chess/: Application.cpp  Application.h  Entrypoint.h  GLFWCallbacks.h  Window.cpp  Window.h
src/Chess/Events/: AppEvent.h  Event.h  MouseEvent.h
src/Chess/Game/: GameBoard.h  GamePieces.h  Piece.h  PieceBehaviour.h  Tile.h
src/Chess/Rendering/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
